--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -12,7 +12,7 @@
 }
 else
 {
-    <GameMessage BootstrapContext="@messageContext" OpponentName="@gameData.OtherPlayerName">
+    <GameMessage BootstrapContext="@messageContext" OpponentName="@game.OtherPlayerName">
         @message
     </GameMessage>
 
@@ -38,7 +38,7 @@ else
 
                             if (tile == ' ')
                             {
-                                userTile = move[x, y];
+                                userTile = game.Move[x, y];
                             }
 
                             if (tile == ' ' && userTile == ' ')
@@ -112,10 +112,10 @@ else
         <div class="game-element-container">
             <div class="player-tiles">
                 <div class="tile-row">
-                    @for (int i = 0; i < gameData.PlayerTiles.Length; i++)
+                    @for (int i = 0; i < game.PlayerTiles.Length; i++)
                     {
                         int space = i;
-                        char tile = gameData.PlayerTiles[space];
+                        char tile = game.PlayerTiles[space];
                         bool userSpaceEmpty = tile == '-';
                         bool thisSelected = (tileBeingMoved is RackPosition moving && moving.Space == space);
                         bool anySelected = (tileBeingMoved != null);
@@ -144,9 +144,7 @@ else
 
 @code {
     [Parameter] public int GameId { get; set; }
-    GameBase game;
-    GameDto gameData;
-    MoveBase move;
+    Game game;
     ITilePosition tileBeingMoved;
     string message;
     string messageContext;
@@ -160,15 +158,13 @@ else
     private async Task LoadGame()
     {
         var data = await Http.GetFromJsonAsync<GameDto>($"/api/game/{GameId}");
-        game = new GameBase(data.Board);
-        gameData = data;
-        move = new MoveBase(game);
+        game = new Game(data);
     }
 
 
     private void UpdateMessage()
     {
-        int score = move.GetScore(out string error);
+        int score = game.Move.GetScore(out string error);
         isValidMove = string.IsNullOrEmpty(error);
         if (isValidMove)
         {
@@ -184,7 +180,7 @@ else
 
     private async Task Play()
     {
-        var response = await Http.PostAsJsonAsync("/api/game", move.Placements);
+        var response = await Http.PostAsJsonAsync("/api/game", game.Move.Placements);
         if (response.StatusCode == System.Net.HttpStatusCode.UnprocessableEntity)
         {
             var badWords = (await response.Content.ReadFromJsonAsync<IEnumerable<string>>()).ToList();
@@ -232,20 +228,20 @@ else
             return Task.CompletedTask;
         }
 
-        char[] tiles = gameData.PlayerTiles.ToCharArray();
+        char[] tiles = game.PlayerTiles.ToCharArray();
 
         switch (tileBeingMoved)
         {
             case RackPosition space:
                 // Moving tiles around in the rack
                 (tiles[newSpace], tiles[space.Space]) = (tiles[space.Space], tiles[newSpace]);
-                gameData.PlayerTiles = new string(tiles);
+                game.PlayerTiles = new string(tiles);
                 break;
             case BoardPosition space:
                 // Removing a tile from the board
-                tiles[newSpace] = move[space.X, space.Y];
-                gameData.PlayerTiles = new string(tiles);
-                move.RemovePlacementAtPosition(space.X, space.Y);
+                tiles[newSpace] = game.Move[space.X, space.Y];
+                game.PlayerTiles = new string(tiles);
+                game.Move.RemovePlacementAtPosition(space.X, space.Y);
                 UpdateMessage();
                 break;
         }
@@ -267,18 +263,18 @@ else
         {
             case RackPosition space:
                 // Placing a tile on the board
-                char[] tiles = gameData.PlayerTiles.ToCharArray();
+                char[] tiles = game.PlayerTiles.ToCharArray();
 
-                move.AddPlacement(new TilePlacement(newX, newY, tiles[space.Space]));
+                game.Move.AddPlacement(new TilePlacement(newX, newY, tiles[space.Space]));
                 tiles[space.Space] = '-';
-                gameData.PlayerTiles = new string(tiles);
+                game.PlayerTiles = new string(tiles);
                 UpdateMessage();
                 break;
 
             case BoardPosition space:
                 // Moving a tile around on the board
-                move.AddPlacement(new TilePlacement(newX, newY, move[space.X, space.Y]));
-                move.RemovePlacementAtPosition(space.X, space.Y);
+                game.Move.AddPlacement(new TilePlacement(newX, newY, game.Move[space.X, space.Y]));
+                game.Move.RemovePlacementAtPosition(space.X, space.Y);
                 UpdateMessage();
                 break;
         }
