--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -184,7 +184,7 @@ else
 
     private async Task Play()
     {
-        var response = await Http.PostAsJsonAsync("/api/game", game.Move.Placements);
+        var response = await Http.PostAsJsonAsync($"/api/game/{GameId}", game.Move.Placements);
         var responseData = await response.Content.ReadFromJsonAsync<MoveResultDto>();
         if (response.StatusCode == System.Net.HttpStatusCode.UnprocessableEntity)
         {
