--- a/ScrabbleWeb/Client/Shared/MainLayout.razor
+++ b/ScrabbleWeb/Client/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using Blazored.Modal.Services
+@using Blazored.Modal 
 
 <div class="sidebar">
     <NavMenu />
@@ -13,3 +15,5 @@
         @Body
     </div>
 </div>
+
+<BlazoredModal />
