--- a/ScrabbleWeb/Client/_Imports.razor
+++ b/ScrabbleWeb/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using ScrabbleWeb.Client
 @using ScrabbleWeb.Client.Shared
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
