Fix bug in message when removing blank tile. Rename methods for improved readability. Improved mouse cursor choice

--- a/ScrabbleWeb/Client/Pages/GameDisplay.razor
+++ b/ScrabbleWeb/Client/Pages/GameDisplay.razor
@@ -61,12 +61,14 @@ else
                                         break;
                                 }
                             }
+                            bool clickable = (tileBeingMoved == null) ? userTile != ' ' : boardSpaceEmpty;
 
-                            <div class=@($"tile-space {multiplierClass}{(thisSelected ? " tile-selected": "")}")
+
+                            <div class=@($"tile-space {multiplierClass}{(thisSelected ? " tile-selected": "")}{(clickable ? " clickable": "")}")
                                  @onclick="e => (boardSpaceEmpty ?
-                                                        EndMove(position) :
+                                                        ClickOnEmptySpace(position) :
                                                  userTile != ' ' ?
-                                                        StartMove(position) :
+                                                        ClickOnMovableTile(position) :
                                                         Task.CompletedTask)">
                                 @if (tile != ' ')
                                 {
@@ -116,16 +118,18 @@ else
             <div class="player-tiles">
                 <div class="tile-row">
                     @for (int i = 0; i < game.PlayerTiles.Length; i++)
-                    {
-                        int space = i;
-                        char tile = game.PlayerTiles[space];
-                        ITilePosition position = new RackPosition(game, space);
-                        bool userSpaceEmpty = tile == ' ';
-                        bool thisSelected = position.Equals(tileBeingMoved);
-
-                        <div class="@($"tile-space{(thisSelected ? " tile-selected" : "")}")" @onclick="e => (userSpaceEmpty ? EndMove(position) : StartMove(position))">
-                            @if (!userSpaceEmpty)
                             {
+                                int space = i;
+                                char tile = game.PlayerTiles[space];
+                                ITilePosition position = new RackPosition(game, space);
+                                bool userSpaceEmpty = tile == ' ';
+                                bool thisSelected = position.Equals(tileBeingMoved);
+                                bool clickable = (tileBeingMoved == null) ? !userSpaceEmpty : userSpaceEmpty;
+
+                        <div class="@($"tile-space{(thisSelected ? " tile-selected" : "")}{(clickable? " clickable": "")}")"
+                             @onclick="e => (userSpaceEmpty ? ClickOnEmptySpace(position) : ClickOnMovableTile(position))">
+                            @if (!userSpaceEmpty)
+                    {
                                 <div class="tile-container">
                                     @* If not a capital letter, it's a blank tile *@
                                     @if (tile >= 'A' && tile <= 'Z')
@@ -163,6 +167,7 @@ else
     {
         var data = await Http.GetFromJsonAsync<GameDto>($"/api/game/{GameId}");
         game = new Game(data);
+        game.Move.AddPlacement(new TilePlacement(0, 0, 'B'));
     }
 
 
@@ -205,7 +210,7 @@ else
         messageContext = "success";
     }
 
-    private async Task StartMove(ITilePosition position)
+    private async Task ClickOnMovableTile(ITilePosition position)
     {
         if (tileBeingMoved == null)
         {
@@ -227,6 +232,7 @@ else
                     {
                         // The user did not choose a letter
                         RemoveBlankToRack(tileBeingMoved);
+                        UpdateMessage();
                     }
                 }
 
@@ -237,7 +243,7 @@ else
         StateHasChanged();
     }
 
-    private async Task EndMove(ITilePosition position)
+    private async Task ClickOnEmptySpace(ITilePosition position)
     {
         if (tileBeingMoved == null)
         {
