--- a/ScrabbleWeb/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/ScrabbleWeb/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using ScrabbleWeb.Server.Models
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@using ScrabbleWeb.Server.Data
+@inject SignInManager<Player> SignInManager
+@inject UserManager<Player> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
