--- a/ScrabbleWeb/Server/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ScrabbleWeb/Server/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,13 +36,11 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        @*<a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>*@
+                        Forgot your password? Speak to the website owner.
                     </p>
                     <p>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>
                 </div>
             </form>
